<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AMPractica2" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/am_txtimporte"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/am_importe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/am_txtporcentajes"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/am_controlgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/am_diezporc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/am_diezporc" />

        <RadioButton
            android:id="@+id/am_qinceporc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/am_quinceporc" />

        <RadioButton
            android:id="@+id/am_veinteporc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/am_veinte_porc" />

        <RadioButton
            android:id="@+id/am_veinticincoporc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/am_veinticincoporc" />
    </RadioGroup>

    <TextView
        android:id="@+id/am_propina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/am_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>